--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+model/final_best_model_vgg19_finetuned.h5 filter=lfs diff=lfs merge=lfs -text
